<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >
    
       <TextView android:text="@string/cn_string_control_up"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:gravity="center"
		/>
	<EditText 
	    android:id="@+id/UPControlSet"
		  android:layout_width="200dp"
		  android:layout_height="40dp"
		  
		  android:gravity="left"
		  android:text="FF000100FF"
	/>

	<TextView android:text="@string/cn_string_control_down"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:layout_marginLeft="25dp"
		  android:gravity="center"
		/>

	<EditText
	    android:id="@+id/DownControlSet"
	    android:layout_width="200dp"
	    android:layout_height="40dp"
	    android:ems="10"
	    android:gravity="left"
	    android:text="FF000200FF" >

	    <requestFocus />
	</EditText>

</LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >
    
       <TextView android:text="@string/cn_string_control_left"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:gravity="center"
		/>
	<EditText 
	    android:id="@+id/LeftControlSet"
		  android:layout_width="200dp"
		  android:layout_height="40dp"
		  android:gravity="left"
		  android:text="FF000300FF"
	/>

	<TextView android:text="@string/cn_string_control_right"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:layout_marginLeft="25dp"
		  android:textSize="16dp"
		  android:gravity="center"
		/>
	<EditText 
	      android:id="@+id/RightControlSet"
		  android:layout_width="200dp"
		  android:layout_height="40dp"
		  android:gravity="left"
		  android:text="FF000400FF"
	/>
</LinearLayout>
   
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >
    
       <TextView android:text="@string/cn_string_control_stop"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:gravity="center"
		/>
	<EditText 
	    android:id="@+id/StopControlSet"
		  android:layout_width="200dp"
		  android:layout_height="40dp"
		  android:gravity="left"
		  android:text="FF000000FF"
	/>

	<TextView android:text="@string/cn_string_control_port"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:layout_marginLeft="25dp"
		  android:gravity="center"
		/>
	<EditText 
	      android:id="@+id/PortControlSet"
		  android:layout_width="150dp"
		  android:layout_height="40dp"
		  android:gravity="left"
		  android:text="2001"
	/>
</LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >
    
     

	<TextView android:text="@string/cn_string_control_address"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:gravity="center"
		/>
<EditText android:id="@+id/ControlAddress"
		  android:layout_width="300dp"
		  android:layout_height="40dp"
		  android:gravity="left"
		  android:text="192.168.1.1"
/>
</LinearLayout>

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >
    
    
	<TextView android:text="@string/cn_string_vedio_address"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:textSize="16dp"
		  android:gravity="center"
		/>
<EditText android:id="@+id/connectionurl"
		  android:layout_width="wrap_content"
		  android:layout_height="40dp"
		  android:gravity="left"
		  android:text="http://192.168.1.1:8080/?action=stream"
/>
</LinearLayout>




</LinearLayout>
